Hiep : config finish apigateway